--- a/force-app/main/default/lwc/ratingstarcomp/ratingstarcomp.css
+++ b/force-app/main/default/lwc/ratingstarcomp/ratingstarcomp.css
@@ -1,18 +1,27 @@
 
-  h1
-  {
+  h1 {
     font-size: 1.5em;
     text-align: center;
+    text-transform: capitalize;
   }
+  
  
-  .rate:not(:checked) > input 
-  {
+  .checked 
+{
+    color: orange;
+  }
+  
+  .rate {
+      float: left;
+      height: 46px;
+      padding: 0 100px;
+  }
+  .rate:not(:checked) > input {
       position:absolute;
       top:-9999px; 
   } 
-  .rate:not(:checked) > label 
-  {
-      
+  .rate:not(:checked) > label {
+      float:right;
       width:1em;
       overflow:hidden;
       white-space:nowrap;
@@ -20,8 +29,7 @@
       font-size:30px;
       color:#ccc;
   }
-  .rate:not(:checked) > label:before 
-  {
+  .rate:not(:checked) > label:before {
       content: '★ ';
   }
   .rate > input:checked ~ label {
@@ -35,18 +43,19 @@
   .rate > input:checked + label:hover ~ label,
   .rate > input:checked ~ label:hover,
   .rate > input:checked ~ label:hover ~ label,
-  .rate > label:hover ~ input:checked ~ label 
-  {
+  .rate > label:hover ~ input:checked ~ label {
       color: #c59b08;
   }
+  
 
+  .rating {
+    display: inline-block;
+    width: 100%;
+    margin-top: -40px;
+    margin-left: -120px;
+    padding-top: 40px;
+    text-align: center;
+  }
+ 
   
-  
-  
-  
-  
-  
-  
-    
-
   
